make it loadable in Hades Revisited.

--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,4 @@
-name = animalia
+name = hades_animalia
 depends = mobkit, mob_core
-optional_depends = default
+optional_depends = hades_core
 description = Adds useful Animals for food, ambiance, and more
